# ASis

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/agent/: __init__.py  graph.py  memory.py  nodes.py  state.py
app/config/: __init__.py  logging_config.py  prompts.py  settings.py
app/models/: __init__.py  llm.py
app/services/: __init__.py  document_classifier.py  document_extractor.py  email_monitor.py  email_service.py  folder_manager.py  folder_monitor.py  image_classifier.py  imap_service.py  oauth_helper.py  smtp_service.py  storage_service.py
app/tools/: __init__.py  base.py  email_tools.py  file_tools.py  folder_tools.py  registry.py
app/utils/: __init__.py  helpers.py
app/widget/: __init__.py  __main__.py  dashboard.py  dwm.py  styles.py
app/widget/api/: __init__.py  agent_bridge.py  llm_client.py
app/widget/components/: __init__.py  prompt_input.py  quick_actions.py  rag_drop.py  response_panel.py  status_header.py  system_metrics.py
config/: destination_folders.json  monitored_folders.json  monitored_senders.json
scripts/: authorize_gmail.py
tests/: __init__.py  test_graph.py  test_llm.py  test_tools.py
